# rules_hashicorp_terraform

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  settings.tf
docs/: tf_main.md  tf_module.md  tf_test.md  tf_workspace.md
examples/: BUILD.bazel
examples/main/: main.tf
examples/main/submodule/: main.tf
examples/modules/foo/: BUILD.bazel  main.tf
terraform/: defs.bzl  dependencies.bzl  repositories.bzl
terraform/go/cmd/stamper/: BUILD.bazel  stamper.go
terraform/go/pkg/utils/: BUILD.bazel
terraform/private/: providers.bzl
terraform/private/common/: common.bzl  helpers.bzl
terraform/rules/: BUILD.bazel  main.bzl  module.bzl  test.bzl  test.sh.tpl  workspace.bzl  workspace.sh.tpl
terraform/toolchain/: BUILD.bazel  BUILD.bazel.tpl  configure.bzl  toolchains.bzl
tools/: workspace_status.sh
